# synapse-map

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_chat_viewer.bat  run_chat_viewer.sh
blog/: 11_conclusion.md
configs/: default.yaml  development.yaml  production.yaml
design-notes/: 01_introduction.md  02_system_overview.md  03_multi_agent_design.md  04_core_implementation.md  05_streamlit_integration.md  06_web_ui_implementation.md  07_cosmosdb_integration.md  08_challenges_solutions.md  09_performance_optimization.md  10_future_prospects.md  11_conclusion.md  article_background.md  article_outline.md
docs/: CosmosDB_PartitionKey_Design.md  CosmosDB_Setup.md  Streamlit_Chat_Viewer.md
scripts/: quick_cosmosdb_test.py  run_development.py  run_production.py  run_streamlit.py  setup_cosmosdb.py  test_cosmosdb_connection.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  business_evaluator.py  creative_planner.py  market_analyst.py  reflection_agent.py  technical_validator.py  user_advocate.py
src/config/: __init__.py  agent_configs.py  prompts.py  settings.py
src/core/: __init__.py  client_manager.py  cosmosdb_manager.py  session_manager.py  team_manager.py
src/utils/: __init__.py  agent_count_termination.py  file_utils.py  logging.py  unicode_utils.py
src/web/: __init__.py  autogen_runner.py  cosmosdb_reader.py  streamlit_app.py
